[package]
name = "clawft-services"
version.workspace = true
publish = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Services for clawft (cron, heartbeat, MCP)"
keywords = ["cron", "heartbeat", "scheduling", "service"]
categories = ["asynchronous"]

[features]
default = []
delegate = ["regex"]
rvf = []
test-utils = []
clawhub = []
api = ["dep:axum", "dep:axum-extra", "dep:tower-http", "dep:futures-util", "dep:clawft-core", "dep:clawft-platform"]

[dependencies]
clawft-types = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
cron = { workspace = true }
reqwest = { workspace = true }
regex = { workspace = true, optional = true }
dirs = { workspace = true }
axum = { version = "0.8", features = ["ws", "json", "macros"], optional = true }
axum-extra = { version = "0.10", features = ["typed-header"], optional = true }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"], optional = true }
futures-util = { workspace = true, optional = true }
clawft-core = { workspace = true, features = ["native"], optional = true }
clawft-platform = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true }
regex = { workspace = true }
mockito = "1"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
# WEFT-300: end-to-end heartbeat tests drive the WS handler with a
# real client over a localhost TCP socket.
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
