[package]
name = "clawft-surface"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Surface description IR + TOML parser + binding expression evaluator + composer runtime (ADR-016 M1.5 subset)"

[lib]
name = "clawft_surface"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
# egui is only needed because the eval module lives here and a handful
# of `ui` helpers (like colored_label) used to sit in compose.rs.
# Kept for now; can drop once eval.rs is fully UI-free.
egui = "0.34"
# Canonical Mode / Input / Permission enums (ADR-015) + OntologySnapshot
# (ADR-017) are re-exported from these crates so the surface IR speaks
# the same types as the manifest + substrate layers.
clawft-app = { workspace = true }
clawft-substrate = { workspace = true }

[dev-dependencies]
# For headless render tests we run egui passes without wasm-specific glue.
