[package]
name = "clawft-surface"
version.workspace = true
publish = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Surface description IR + TOML parser + binding expression evaluator + composer runtime (ADR-016 M1.5 subset)"

[lib]
name = "clawft_surface"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
# Canonical Mode / Input / Permission enums (ADR-015) + OntologySnapshot
# (ADR-017) are re-exported from these crates so the surface IR speaks
# the same types as the manifest + substrate layers.
clawft-app = { workspace = true }
clawft-substrate = { workspace = true }

[dev-dependencies]
# Headless eval tests use only serde_json fixtures; no UI deps required.
