[package]
name = "clawft-treecalc"
version = "0.1.0"
publish = true
edition = "2021"
description = "Tree-calculus Form triage (Atom / Sequence / Branch) — shared across kernel, graphify, and any other caller that wants structural dispatch"
license = "MIT OR Apache-2.0"
repository = "https://github.com/weave-logic-ai/weftos"
keywords = ["tree-calculus", "dispatch", "classification"]

[dependencies]
serde = { workspace = true, optional = true }

[features]
default = []
serde = ["dep:serde"]
